CopyOnWriteArrayList to constructor in ImplWarehouse